# distill-abm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  metadata.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
archive/legacy_repo/: README_legacy.md
archive/legacy_repo/Paper/: Paper.docx  schema.pptx
archive/legacy_repo/Presentations/: Final.pptx  Noedric Presentation Template.pptx  Second Presentation.pptx  Suggestions of method to deploy for evaluation with LLM.pptx
archive/legacy_repo/References/: Research Papers Overview.csv  Research Papers Overview.numbers
configs/: evaluation.yaml  experiment_settings.yaml  models.yaml  notebook_experiment_settings.yaml  notebook_prompt_reference.yaml  prompts.yaml  runtime_defaults.yaml
configs/abms/: fauna.yaml  grazing.yaml  milk_consumption.yaml
configs/ground_truth/: fauna_gpt5.2_short_ground_truth.txt  milk_gpt5.2_long_ground_truth.txt
configs/notebook_ground_truth/: fauna_scoring_ground_truth.txt  grazing_scoring_ground_truth.txt  milk_scoring_ground_truth.txt
data/abms/fauna/: fauna.nlogo
data/abms/grazing/: RAGE_PlottingOutput.nls  RAGE_VegetationLivestockModel.nls  (+1 more)
data/fauna_abm/: modeling-post-pleistocene-megafauna-extinctions-as-complex-social-ecological-systems.txt
data/grazing_abm/: grazing.nlogo
data/human_reference/: README.md
data/milk_consumption_abm/: milk-article.txt  milk_consumption.nlogo
data/paper/: Main.txt
docs/: AGENT_BACKLOG.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  DECISION_LOG.md  EVALUATION_FREEZE.md  FAILURE_SEMANTICS.md  GROUND_TRUTHS_GPT5.2.md  HYPERPARAMETERS.md  MANUAL_VALIDATION.md  PARITY.md  README.md  RESULTS_BUCKET.md  RUN_EXECUTION_ORDER.md  TESTING_REPORT.md  TRACEABILITY_MATRIX.md  WALKTHROUGH.md  archive_full_manifest.json  archive_full_manifest.md  notebook_coverage_matrix.json  notebook_coverage_matrix.md  notebook_function_audit.json  notebook_function_inventory.md  runtime_notebook_dependencies.json  runtime_notebook_dependencies.md
notes/: prompt-compression-audit.md
results/: README.md
results/eval_mistral_kimi/: latest_run.txt
results/eval_qwen_kimi/: latest_run.txt
results/eval_qwen_mistral/: latest_run.txt
results/eval_qwen_mistral_kimi/: latest_run.txt
results/quantitative_master_overview/: anova_table.md  best_scores_table.md  evidence_summary_table.md  factorial_table.md  prompt_compression_summary.md
scripts/: archive_audit.py  build_notebook_inventory_docs.py  build_runtime_notebook_dependency_docs.py  materialize_archive_migrations.py  refresh_parity_artifacts.py
src/distill_abm/: __init__.py  agent_validation.py  cli.py  cli_abm_inputs.py  cli_actions.py  cli_defaults.py  cli_models.py  cli_output.py  cli_policy.py  cli_quality_gate.py  cli_support.py  run_viewer.py  run_viewer_payloads.py  structured_logging.py
tests/e2e/: test_cli.py  test_cli_exploitation_factor_study.py  test_cli_full_case_matrix_smoke.py  test_cli_full_case_smoke.py  test_cli_full_case_suite_smoke.py  test_cli_ingest_smoke.py  test_cli_llm_same_settings_study.py  test_cli_local_qwen_sample_smoke.py  test_cli_monitor_local_qwen.py  test_cli_quality_gate.py  test_cli_quantitative_smoke.py  test_cli_results_bucket.py  test_cli_summarizer_smoke.py  test_cli_tune_local_qwen.py
tests/integration/: test_pipeline_run.py  test_pipeline_uses_abm_and_full_metrics.py
tests/regression/: test_archive_manifest.py  test_archive_retired.py  test_evaluation_assets_migration.py  test_model_assets_migration.py  test_notebook_equivalence.py  test_notebook_function_coverage.py  test_prompt_reference_equivalence.py  test_reference_equivalence.py  test_reference_function_coverage.py  test_runtime_notebook_dependencies.py  test_runtime_reference_dependencies.py
tests/unit/: test_agent_validation.py  test_cli_actions_optimization.py  test_cli_actions_results_bucket.py  test_cli_support.py  test_run_viewer.py  test_structured_logging.py
(+76173 files in other folders)
